--- a/package.json
+++ b/package.json
@@ -1,39 +1,91 @@
 {
-  "name": "pwa-conf-app",
-  "version": "1.0.0",
-  "description": "This is a Web component Example",
-  "main": "sw.js",
-  "scripts": {
-    "webpack": "webpack",
-    "webpack-dev-server": "webpack-dev-server --history-api-fallback",
-    "prod": "npm run webpack -- --env.mode production --env.presets serviceworker",
-    "dev": "npm run webpack-dev-server -- --env.mode development",
-    "dev:sw": "npm run webpack-dev-server -- --env.mode development  --env.presets serviceworker"
-  },
-  "keywords": [],
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.1.5",
-    "babel-loader": "^8.0.4",
-    "babel-preset-minify": "^0.5.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "style-loader": "^0.21.0",
-    "ts-loader": "^6.1.0",
-    "typescript": "^3.6.3",
-    "webpack": "^4.23.1",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.1.3",
-    "workbox-webpack-plugin": "^3.3.1"
-  },
-  "dependencies": {
-    "lit-element": "^2.0.0",
-    "@webcomponents/webcomponentsjs": "^2.1.3"
-  }
+    "name": "pwa-conf-app",
+    "version": "1.0.0",
+    "description": "This is a Web component Example",
+    "main": "sw.js",
+    "scripts": {
+        "webpack": "webpack",
+        "webpack-dev-server": "webpack-dev-server --history-api-fallback",
+        "build": "npm run webpack -- --env.mode production --env.presets serviceworker",
+        "dev": "npm run webpack-dev-server -- --env.mode development",
+        "dev:sw": "npm run webpack-dev-server -- --env.mode development  --env.presets serviceworker"
+    },
+    "keywords": [],
+    "license": "Apache-2.0",
+    "devDependencies": {
+        "@babel/core": "^7.7.4",
+        "@babel/helper-module-imports": "^7.7.4",
+        "@babel/helper-plugin-utils": "^7.0.0",
+        "@babel/plugin-proposal-async-generator-functions": "^7.7.4",
+        "@babel/plugin-proposal-dynamic-import": "^7.7.4",
+        "@babel/plugin-proposal-json-strings": "^7.7.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+        "@babel/plugin-proposal-optional-catch-binding": "^7.7.4",
+        "@babel/plugin-proposal-unicode-property-regex": "^7.7.4",
+        "@babel/plugin-syntax-async-generators": "^7.7.4",
+        "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+        "@babel/plugin-syntax-json-strings": "^7.7.4",
+        "@babel/plugin-syntax-object-rest-spread": "^7.7.4",
+        "@babel/plugin-syntax-optional-catch-binding": "^7.7.4",
+        "@babel/plugin-syntax-top-level-await": "^7.7.4",
+        "@babel/plugin-transform-arrow-functions": "^7.7.4",
+        "@babel/plugin-transform-async-to-generator": "^7.7.4",
+        "@babel/plugin-transform-block-scoped-functions": "^7.7.4",
+        "@babel/plugin-transform-block-scoping": "^7.7.4",
+        "@babel/plugin-transform-classes": "^7.7.4",
+        "@babel/plugin-transform-computed-properties": "^7.7.4",
+        "@babel/plugin-transform-destructuring": "^7.7.4",
+        "@babel/plugin-transform-dotall-regex": "^7.7.4",
+        "@babel/plugin-transform-duplicate-keys": "^7.7.4",
+        "@babel/plugin-transform-exponentiation-operator": "^7.7.4",
+        "@babel/plugin-transform-for-of": "^7.7.4",
+        "@babel/plugin-transform-function-name": "^7.7.4",
+        "@babel/plugin-transform-instanceof": "^7.7.4",
+        "@babel/plugin-transform-literals": "^7.7.4",
+        "@babel/plugin-transform-member-expression-literals": "^7.7.4",
+        "@babel/plugin-transform-modules-amd": "^7.7.4",
+        "@babel/plugin-transform-modules-commonjs": "^7.8.3",
+        "@babel/plugin-transform-modules-systemjs": "^7.7.4",
+        "@babel/plugin-transform-modules-umd": "^7.7.4",
+        "@babel/plugin-transform-named-capturing-groups-regex": "^7.7.4",
+        "@babel/plugin-transform-new-target": "^7.7.4",
+        "@babel/plugin-transform-object-super": "^7.7.4",
+        "@babel/plugin-transform-parameters": "^7.7.4",
+        "@babel/plugin-transform-property-literals": "^7.7.4",
+        "@babel/plugin-transform-regenerator": "^7.7.4",
+        "@babel/plugin-transform-reserved-words": "^7.7.4",
+        "@babel/plugin-transform-shorthand-properties": "^7.7.4",
+        "@babel/plugin-transform-spread": "^7.7.4",
+        "@babel/plugin-transform-sticky-regex": "^7.7.4",
+        "@babel/plugin-transform-template-literals": "^7.7.4",
+        "@babel/plugin-transform-typeof-symbol": "^7.7.4",
+        "@babel/plugin-transform-unicode-regex": "^7.7.4",
+        "@babel/preset-env": "^7.1.5",
+        "babel-loader": "^8.0.4",
+        "babel-plugin-transform-require-extensions": "^2.0.0",
+        "babel-preset-minify": "^0.5.0",
+        "clean-webpack-plugin": "^0.1.19",
+        "copy-webpack-plugin": "^4.5.2",
+        "css-loader": "^1.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.4.1",
+        "style-loader": "^0.21.0",
+        "ts-loader": "^6.1.0",
+        "typescript": "^3.6.3",
+        "webpack": "^4.23.1",
+        "webpack-cli": "^3.0.8",
+        "webpack-dev-server": "^3.1.14",
+        "webpack-merge": "^4.1.3",
+        "workbox-webpack-plugin": "^3.3.1"
+    },
+    "dependencies": {
+        "@babel/core": "^7.7.4",
+        "@babel/plugin-proposal-class-properties": "^7.5.5",
+        "@babel/plugin-transform-arrow-functions": "^7.7.4",
+        "@babel/plugin-transform-typescript": "^7.8.3",
+        "@babel/polyfill": "^7.8.3",
+        "@babel/runtime": "7.8.4",
+        "@webcomponents/webcomponentsjs": "^2.1.3",
+        "lit-element": "^2.0.0"
+    }
 }
